Started work on Swagger docs.
OHM-1083: Create imas_student endpoint in OHM
